@@ -1,0 +1,1 @@
+bin/netcfg bin/ptom
