@@ -1,0 +1,6 @@
+bin
+etc/dhcp
+etc/dhcp3
+etc/network
+usr/lib/base-installer.d
+var/dhcp
